--- a/docs/docs/comp/form/properties/items/properties/component/api-select.mdx
+++ b/docs/docs/comp/form/properties/items/properties/component/api-select.mdx
@@ -7,3 +7,5 @@ import { default as raw } from "!raw-loader!examples/demo/form/properties/items/
 <ExpandDemoWrapper rawStr={raw}>
   <FormDemos.Properties.items.Properties.component.ApiSelect />
 </ExpandDemoWrapper>
+
+[ApiSelect API](/docs/api/interfaces/IApiSelectProps)
