--- a/docs/docs/comp/form/properties/items/properties/component/api-auto-complete.mdx
+++ b/docs/docs/comp/form/properties/items/properties/component/api-auto-complete.mdx
@@ -7,3 +7,5 @@ import { default as raw } from "!raw-loader!examples/demo/form/properties/items/
 <ExpandDemoWrapper rawStr={raw}>
   <FormDemos.Properties.items.Properties.component.ApiAutoComplete />
 </ExpandDemoWrapper>
+
+[ApiAutoComplete API](/docs/api/interfaces/IApiAutoCompleteProps)
