优化表格生成搜索表单条件

--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -1,6 +1,7 @@
 import { TableDemos } from "examples";
 import { default as tableRaw } from "!raw-loader!examples/demo/table/base.tsx";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
+import TableApi from "@site/docs/comp/table/properties/table/properties/api.mdx";
 
 # XphTable 可配置列表
 
@@ -9,6 +10,10 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 <ExpandDemoWrapper rawStr={tableRaw}>
   <TableDemos.Base />
 </ExpandDemoWrapper>
+
+## 案例
+
+<TableApi />
 
 ## API
 
