--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -2,6 +2,9 @@ import { TableDemos } from "examples";
 import { default as tableRaw } from "!raw-loader!examples/demo/table/base.tsx";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 import TableApi from "@site/docs/comp/table/properties/table/properties/api.mdx";
+import TableFullHeight from "@site/docs/comp/table/properties/table/properties/fullHeight.mdx";
+import TableAutoRequest from "@site/docs/comp/table/properties/table/properties/autoRequest.mdx";
+import TableAutoPagination from "@site/docs/comp/table/properties/table/properties/autoPagination.mdx";
 
 # XphTable 可配置列表
 
@@ -14,6 +17,14 @@ import TableApi from "@site/docs/comp/table/properties/table/properties/api.mdx"
 ## 案例
 
 <TableApi />
+
+<TableFullHeight />
+
+<TableAutoRequest />
+
+<TableAutoPagination />
+
+### 文档待完善...
 
 ## API
 
