fix: 新增table demo

--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -5,6 +5,10 @@ import TableApi from "@site/docs/comp/table/properties/table/properties/api.mdx"
 import TableFullHeight from "@site/docs/comp/table/properties/table/properties/fullHeight.mdx";
 import TableAutoRequest from "@site/docs/comp/table/properties/table/properties/autoRequest.mdx";
 import TableAutoPagination from "@site/docs/comp/table/properties/table/properties/autoPagination.mdx";
+import TableFormatDataSource from "@site/docs/comp/table/properties/table/properties/formatDataSource.mdx";
+import TableVirtual from "@site/docs/comp/table/properties/table/properties/virtual.mdx";
+import TablePagination from "@site/docs/comp/table/properties/table/properties/pagination.mdx";
+import TableToolbar from "@site/docs/comp/table/properties/table/properties/toolbar.mdx";
 
 # XphTable 可配置列表
 
@@ -23,6 +27,14 @@ import TableAutoPagination from "@site/docs/comp/table/properties/table/properti
 <TableAutoRequest />
 
 <TableAutoPagination />
+
+<TableFormatDataSource />
+
+<TableVirtual />
+
+<TablePagination />
+
+<TableToolbar />
 
 ### 文档待完善...
 
