--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -9,6 +9,7 @@ import TableFormatDataSource from "@site/docs/comp/table/properties/table/proper
 import TableVirtual from "@site/docs/comp/table/properties/table/properties/virtual.mdx";
 import TablePagination from "@site/docs/comp/table/properties/table/properties/pagination.mdx";
 import TableToolbar from "@site/docs/comp/table/properties/table/properties/toolbar.mdx";
+import Ref from "@site/docs/comp/table/properties/ref.mdx";
 
 # XphTable 可配置列表
 
@@ -35,6 +36,8 @@ import TableToolbar from "@site/docs/comp/table/properties/table/properties/tool
 <TablePagination />
 
 <TableToolbar />
+
+<Ref />
 
 ### 文档待完善...
 
