--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -1,6 +1,7 @@
 import { TableDemos } from "examples";
 import { default as tableRaw } from "!raw-loader!examples/demo/table/base.tsx";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
+import Ref from "@site/docs/comp/table/properties/ref.mdx";
 import TableApi from "@site/docs/comp/table/properties/table/properties/api.mdx";
 import TableFullHeight from "@site/docs/comp/table/properties/table/properties/fullHeight.mdx";
 import TableAutoRequest from "@site/docs/comp/table/properties/table/properties/autoRequest.mdx";
@@ -9,7 +10,7 @@ import TableFormatDataSource from "@site/docs/comp/table/properties/table/proper
 import TableVirtual from "@site/docs/comp/table/properties/table/properties/virtual.mdx";
 import TablePagination from "@site/docs/comp/table/properties/table/properties/pagination.mdx";
 import TableToolbar from "@site/docs/comp/table/properties/table/properties/toolbar.mdx";
-import Ref from "@site/docs/comp/table/properties/ref.mdx";
+import TableColumnsRender from "@site/docs/comp/table/properties/table/properties/columns/properties/render.mdx";
 
 # XphTable 可配置列表
 
@@ -36,6 +37,12 @@ import Ref from "@site/docs/comp/table/properties/ref.mdx";
 <TablePagination />
 
 <TableToolbar />
+
+<TableColumnsRender />
+
+### 列内容组件映射
+
+[组件映射](/docs/comp/table/properties/table/properties/columns/properties/cellFunc/properties/component)
 
 <Ref />
 
