--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -2,6 +2,7 @@ import { TableDemos } from "examples";
 import { default as tableRaw } from "!raw-loader!examples/demo/table/base.tsx";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 import Ref from "@site/docs/comp/table/properties/ref.mdx";
+import SearchForm from "@site/docs/comp/table/properties/searchForm.mdx";
 import TableApi from "@site/docs/comp/table/properties/table/properties/api.mdx";
 import TableFullHeight from "@site/docs/comp/table/properties/table/properties/fullHeight.mdx";
 import TableAutoRequest from "@site/docs/comp/table/properties/table/properties/autoRequest.mdx";
@@ -43,6 +44,8 @@ import TableColumnsRender from "@site/docs/comp/table/properties/table/propertie
 ### 列内容组件映射
 
 [组件映射](/docs/comp/table/properties/table/properties/columns/properties/cellFunc/properties/component)
+
+<SearchForm />
 
 <Ref />
 
