--- a/docs/docs/comp/table/properties/table/properties/columns/properties/cellFunc/properties/component/multiComponent.mdx
+++ b/docs/docs/comp/table/properties/table/properties/columns/properties/cellFunc/properties/component/multiComponent.mdx
@@ -3,7 +3,7 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 import DescribeDemoWrapper from "@site/src/components/DescribeDemoWrapper";
 import { default as raw } from "!raw-loader!examples/demo/table/properties/table/properties/columns/properties/cellFunc/properties/component/multiComponent.tsx";
 
-## 多组件
+## 多组件映射
 
 <ExpandDemoWrapper rawStr={raw}>
   <TableDemos.Properties.table.Properties.columns.Properties.cellFunc.Properties.component.MultiComponent />
