--- a/docs/docs/comp/table/base.mdx
+++ b/docs/docs/comp/table/base.mdx
@@ -3,6 +3,7 @@ import { default as tableRaw } from "!raw-loader!examples/demo/table/base.tsx";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 import Ref from "@site/docs/comp/table/properties/ref.mdx";
 import SearchForm from "@site/docs/comp/table/properties/searchForm.mdx";
+import CrudFormDialog from "@site/docs/comp/table/properties/crudFormDialog.mdx";
 import TableApi from "@site/docs/comp/table/properties/table/properties/api.mdx";
 import TableFullHeight from "@site/docs/comp/table/properties/table/properties/fullHeight.mdx";
 import TableAutoRequest from "@site/docs/comp/table/properties/table/properties/autoRequest.mdx";
@@ -47,9 +48,9 @@ import TableColumnsRender from "@site/docs/comp/table/properties/table/propertie
 
 <SearchForm />
 
-<Ref />
+<CrudFormDialog />
 
-### 文档待完善...
+<Ref />
 
 ## API
 
