--- a/docs/docs/comp/dialog/base.mdx
+++ b/docs/docs/comp/dialog/base.mdx
@@ -1,6 +1,11 @@
 import { DialogDemos } from "examples";
 import { default as dialogRaw } from "!raw-loader!examples/demo/dialog/base.tsx";
 import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
+import Mask from "@site/docs/comp/dialog/properties/mask.mdx";
+import Width from "@site/docs/comp/dialog/properties/width.mdx";
+import Height from "@site/docs/comp/dialog/properties/height.mdx";
+import RenderFooter from "@site/docs/comp/dialog/properties/renderFooter.mdx";
+import RenderTitle from "@site/docs/comp/dialog/properties/renderTitle.mdx";
 
 # XphDialog 层叠弹窗
 
@@ -9,6 +14,18 @@ import ExpandDemoWrapper from "@site/src/components/ExpandDemoWrapper";
 <ExpandDemoWrapper rawStr={dialogRaw} height={"400px"}>
   <DialogDemos.Base />
 </ExpandDemoWrapper>
+
+## 案例
+
+<Mask />
+
+<Width />
+
+<Height />
+
+<RenderFooter />
+
+<RenderTitle />
 
 ## API
 
