--- a/docs/docs/comp/table/properties/table/properties/columns/properties/cellFunc/properties/component/index.mdx
+++ b/docs/docs/comp/table/properties/table/properties/columns/properties/cellFunc/properties/component/index.mdx
@@ -1,6 +1,7 @@
 import Link from "./link.mdx";
 import Tag from "./tag.mdx";
 import Actions from "./actions.mdx";
+import Copy from "./copy.mdx";
 import MultiComponent from "./multiComponent.mdx";
 
 # 列内容组件映射
@@ -12,5 +13,7 @@ import MultiComponent from "./multiComponent.mdx";
 <Tag />
 
 <Actions />
+
+<Copy />
 
 <MultiComponent />
