--- a/docs/docs/comp/dialog/base.mdx
+++ b/docs/docs/comp/dialog/base.mdx
@@ -6,6 +6,7 @@ import Width from "@site/docs/comp/dialog/properties/width.mdx";
 import Height from "@site/docs/comp/dialog/properties/height.mdx";
 import RenderFooter from "@site/docs/comp/dialog/properties/renderFooter.mdx";
 import RenderTitle from "@site/docs/comp/dialog/properties/renderTitle.mdx";
+import Ref from "@site/docs/comp/dialog/properties/ref.mdx";
 
 # XphDialog 层叠弹窗
 
@@ -26,6 +27,8 @@ import RenderTitle from "@site/docs/comp/dialog/properties/renderTitle.mdx";
 <RenderFooter />
 
 <RenderTitle />
+
+<Ref />
 
 ## API
 
